--- a/css/base.css
+++ b/css/base.css
@@ -1,18 +1,36 @@
 img {
-  background-size: cover;
   max-width: 100%;
 }
-hr {
-  margin: 1em;
-  width: 80%;
-}
+
 body {
   line-height: 1.5;
   font-size: 100%;
   color: #313131;
 }
 
-/*** Link Styles ***/
+main {
+  margin: auto;
+  width: 90%;
+}
+
+hr {
+  margin: 1em;
+  width: 80%;
+}
+
+/*TEXT STYLES
+=======================================*/
+p {
+  font-size: 1em;
+}
+
+address {
+  display: inline-block;
+}
+
+/*LINK STYLES
+=======================================*/
+
 a, a:link, a:active {
   text-decoration: none;
   color: #777;
@@ -23,19 +41,40 @@ a:hover, a:focus {
 }
 
 a:visited {
-  color: #AAA;
 }
 
-/**** Text Styles ****/
-p {
-  font-size: 1em;
+/*FORM STYLES
+=======================================*/
+label {
+  font-size: 3em;
 }
 
-address {
-  display: inline-block;
+input {
+  width: 100%;
+  margin: .5em 0;
+  border: 1px solid #ccc;
+  border-width: 0 0 1px 0;
+  border-radius: 0;
 }
 
-article {
-  border-bottom: 2px solid black;
-  margin: 0 2.5%;
+input[type="checkbox"] {
+  width: .28em;
+  height: .28em;
+  font-size: 3em;
+}
+
+textarea {
+  width: 100%;
+  margin: .5em 0;
+  font-size: 2em;
+  border: 1px solid #ccc;
+  border-radius: 0;
+}
+
+input:invalid, textarea:invalid {
+  border-color: #AE3F3C;
+}
+
+input:valid, textarea:valid {
+  border-color: #89CB8E;
 }
