--- a/css/layout.css
+++ b/css/layout.css
@@ -12,7 +12,28 @@
   clear: both;
 }
 
-.heading-group {
+.heading-group-h1 {
   max-width: 100%;
-  text-align: center;
+}
+
+#filters select {
+  width: 90%;
+  margin: .2em 5%;
+}
+
+@media only screen and (min-width: 640px) {
+  .heading-group-h1 {
+    padding: .1em .1em .1em 2em;
+    float: none;
+  }
+
+  #filters select {
+    width: 15em;
+    margin: .2em .2em;
+  }
+
+  #filters li {
+    width: 20em;
+    display: inline;
+  }
 }
