--- a/css/modules.css
+++ b/css/modules.css
@@ -1,73 +1,92 @@
 .site-header {
-  background-color: rgba(78, 142, 222 , 0.6);
+  background: #FFAAFF;
 }
-.heading-group {
-  padding: 0 0 .2em 1em;
-  margin: auto 0;
-  display: block;
+
+.heading-group-h1 {
+  padding: 0 4em 0 4em
 }
-.icon-menu .fa .fa-bars{
-  display: inline-block;
-  font-size: 1.5em;
+
+.icon-menu {
+  font-size: 3em;
   float: left;
 }
+
 .main-nav {
   padding: 0.1em;
 }
-/*  We are default hiding the main nav list because we are expecting the UI to be mobile, therefore our new icon menu takes its place. */
+
 .main-nav ul {
   display: none;
   padding: 0;
   list-style: none;
   clear: both;
 }
+
 .main-nav:hover ul {
   display: block;
 }
+
 .main-nav li {
   margin-right: .4em;
   font-size: 1.5em;
   padding: .5em .2em;
   border-bottom: 1px solid #ccc;
 }
-.template {
+
+.tab-content {
   display: none;
 }
+
+#filters {
+  padding: 0;
+  display: none;
+  list-style: none;
+}
+
 .byline {
   color: #777;
 }
+
 .byline a {
   font-weight: bold;
   text-decoration: none;
 }
-.profile-pic {
-  height: 150px;
-  width: 150px;
-  background-image: url("../assets/images/geno-profile-medium.jpg");
-  background-size: cover;
+
+#article-export label {
+  font-size: .8em;
+  font-style: italic;
+  color: #ccc;
 }
-.profile-intro {
-  margin-top: 10px;
-  width: 100%;
+
+#ajax-spinner h2 {
   display: inline-block;
+  margin-bottom: 5rem;
 }
-/* add styles for how things should look on a larger screen */
-@media screen and (min-width: 420px) {
+
+#ajax-spinner img {
+  margin-top: 3rem;
+}
+
+@media only screen and (min-width: 640px) {
   .icon-menu {
     display: none;
   }
+
+  .main-nav {
+    padding: .2em .2em .2em 2em;
+  }
+
   .main-nav ul {
     display: block;
-    height: 50px;
   }
-  .main-nav li {
-    display: inline-block;
-    padding: 0.25em;
+
+  .main-nav ul li {
+    display: inline;
+    border-bottom: none;
   }
-  .profile-intro {
-    margin-top: 0;
-    margin-left: 10px;
-    width: 70%;
-    display: inline-block;
+
+  .main-nav ul li:hover a {
+    color: #29506D;
   }
+
 }
